# legion

./: CMakeLists.txt  README  main-irrlicht.cpp  main.cpp  wincompile.bat
data/gfx/.svn/: entries
data/gfx/buttons/.svn/: entries
data/gfx/buttons/.svn/text-base/: btn_ok.png.svn-base  btn_orders.png.svn-base  legion_orders.png.svn-base  ok.png.svn-base
data/gfx/map/.svn/: entries
data/gfx/map/.svn/text-base/: legion_flag_blue.png.svn-base  legion_flag_red.png.svn-base  village.png.svn-base  world_map.jpg.svn-base
data/gfx/shops/.svn/: entries
data/gfx/windows/.svn/: entries
doc/: Akcje  GUI  Pomysly.odt  Wazne_struktura_plikow_dat  dane  doc  dopomyslow  konwencja  parents  projekt  struktura  szyfrowanie
lgfx/: CButton.cpp  CButton.h  CEventReceiver.h  CGraphic.cpp  CGraphic.h  CGui.cpp  CGui.h  CMakeLists.txt  CMapGui.cpp  CMapGui.h  CWindow.cpp  CWindow.h  SPoint.h  leggfx.h
libleg/: CAction.cpp  CAction.h  CActor.cpp  CActor.h  CAdventure.cpp  CAdventure.h  CAi.cpp  CAi.h  CBuilding.cpp  CBuilding.h  CCity.cpp  CCity.h  CEventManager.cpp  CEventManager.h  CHumanPlayer.cpp  CHumanPlayer.h  CItem.cpp  CItem.h  CLegion.cpp  CLegion.h  CMainMap.cpp  CMainMap.h  CMakeLists.txt  CPlayer.cpp  CPlayer.h  CPlayerPattern.cpp  CPlayerPattern.h  CShop.cpp  CShop.h  CSimulatedAction.cpp  CSimulatedAction.h  SInventory.h  Tools.cpp  Tools.h  libleg.h
libleg/legcrypt/: CData.cpp  CData.h  CLegCrypt.cpp  CLegCrypt.h
src-amos/: leg31.Asc  procedury
tools/: Makefile  dataraw.txt  decoder.cpp  encoder.cpp  ludki
(+2 files in other folders)
